--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -391,7 +391,7 @@
 
                                     <a href="@Url.Action("PM_UPload", "ProjectMonitor")">
                                         <!-- <i class="metismenu-icon pe-7s-home"></i> -->
-                                        <i class="metismenu-icon fa fa-american-sign-language-interpreting"></i>
+                                        <i class="metismenu-icon fa fa-upload"></i>
                                         PM File Upload
                                     </a>
                                 </li>
