--- a/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
@@ -62,13 +62,13 @@
 
     $(document).ready(function () {
         $("#tblProjectCreation").dataTable({
-            "order": [[1, 'desc']]
-            //"columnDefs": [
-            //    {
-            //        "targets": [1],
-            //        "visible": false
-            //    }
-            //]
+            "order": [[1, 'desc']],
+            "columnDefs": [
+                {
+                    "targets": [1],
+                    "visible": false
+                }
+            ]
         } );
     });
 
