--- a/ProAcc/Views/ProjectMonitor/Monitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Monitor.cshtml
@@ -224,7 +224,7 @@
                     },
                 },
                 {
-                    label: 'Est.(hrs) HH:MM', name: 'EST_hrs', width: 55,
+                    label: 'Est.(hh:mm)', name: 'EST_hrs', width: 55,
                     editable: true, align: 'right', //formatter: 'string',
                     editrules: { },
                     editoptions: {
@@ -244,7 +244,7 @@
                     }
                 },
                 {
-                    label: 'Actual (hrs)', name: 'Actual_St_hrs',
+                    label: 'Actual (hh:mm)', name: 'Actual_St_hrs',
                     width: 55, editable: true,align: 'right',
                     editoptions: {
                          dataInit: function (element) {
