--- a/ProAcc/Views/ProjectMonitor/PMTask.cshtml
+++ b/ProAcc/Views/ProjectMonitor/PMTask.cshtml
@@ -324,7 +324,7 @@
                     },
                 },
                 {
-                    label: 'Est.(hrs)', name: 'EST_hours1', width: 45,
+                    label: 'Est. (hh:mm)', name: 'EST_hours1', width: 45,
                     editable: true, align:'right',
                     editrules: { },
                     editoptions: {
@@ -344,7 +344,7 @@
                     }
                 },
                 {
-                    label: 'Actual (hrs)', name: 'Actual_St_hours',
+                    label: 'Actual (hh:mm)', name: 'Actual_St_hours',
                     width: 45, editable: true,align:'right',
                     editoptions: {
                          dataInit: function (element) {
