--- a/ProAcc/Views/Report/_AuditReportIndex.cshtml
+++ b/ProAcc/Views/Report/_AuditReportIndex.cshtml
@@ -11,10 +11,10 @@
     <thead>
         <tr>
             <th>Table</th>
-            <th>Summary</th>
+            <th style="max-width:5%;">Summary</th>
             <th>Action</th>
-            <th style="width:70px">Action On</th>
-            <th style="width:71px">Action By</th>
+            <th>Action On</th>
+            <th>Action By</th>
         </tr>
     </thead>
     <tbody>
