--- a/ProAcc/Views/Report/PMReport.cshtml
+++ b/ProAcc/Views/Report/PMReport.cshtml
@@ -15,10 +15,17 @@
         display: block;
     }
 </style>
-
+<div class="row">
+    <div class="col-6">
+        <a class="card-title" style="float: left;">Project Name :@Session["Project_Name"]</a>
+    </div>
+    <div class="col-6">
+        <a class="card-title " style="float: right;">Instance Name : @Session["Instance_Name"]</a>
+    </div>
+</div>
 <ul class="tabs-animated-shadow nav-justified tabs-animated nav">
     <li class="nav-item Hideme" id="Nav_4">
-        <a role="tab" class="nav-link" id="tab-c1-4" data-toggle="tab" href="#tab-animated1-4" aria-selected="false">
+        <a role="tab" class="nav-link show active" id="tab-c1-4" data-toggle="tab" href="#tab-animated1-4" aria-selected="false">
             <span class="nav-text">Comprehensive Assessment and Readiness Check Report</span>
         </a>
     </li>
@@ -28,39 +35,39 @@
         </a>
     </li>
     <li class="nav-item Hideme" id="Nav_1">
-        <a role="tab" class="nav-link show active" id="tab-c1-1" data-toggle="tab" href="#tab-animated1-1" aria-selected="false">
+        <a role="tab" class="nav-link " id="tab-c1-1" data-toggle="tab" href="#tab-animated1-1" aria-selected="false">
             <span class="nav-text">Custom Code Analysis</span>
         </a>
     </li>
 
     <li class="nav-item Hideme" id="Nav_2">
         <a role="tab" class="nav-link show" id="tab-c1-2" data-toggle="tab" href="#tab-animated1-2" aria-selected="false">
-            <span class="nav-text">Current State & Vision: Business Case</span>
-        </a>
-    </li>
-    <li class="nav-item Hideme" id="Nav_3">
-        <a role="tab" class="nav-link show" id="tab-c1-2" data-toggle="tab" href="#tab-animated1-3" aria-selected="false">
             <span class="nav-text">License Optimization</span>
         </a>
     </li>
+    @*<li class="nav-item Hideme" id="Nav_3">
+        <a role="tab" class="nav-link show" id="tab-c1-2" data-toggle="tab" href="#tab-animated1-3" aria-selected="false">
+            <span class="nav-text">Current State & Vision: Business Case</span>
+        </a>
+    </li>*@
 
 </ul>
 <div class="tab-content ">
-    <div class="tab-pane" id="tab-animated1-4" role="tabpanel">
+    <div class="tab-pane show active" id="tab-animated1-4" role="tabpanel">
         <div id="Parent4"></div>
     </div>
     <div class="tab-pane" id="tab-animated1-0" role="tabpanel">
         <div id="Parent0"></div>
     </div>
-    <div class="tab-pane show active" id="tab-animated1-1" role="tabpanel">
+    <div class="tab-pane" id="tab-animated1-1" role="tabpanel">
         <div id="Parent1"></div>
     </div>
     <div class="tab-pane show" id="tab-animated1-2" role="tabpanel">
         <div id="Parent2"></div>
     </div>
-    <div class="tab-pane show" id="tab-animated1-3" role="tabpanel">
+    @*<div class="tab-pane show" id="tab-animated1-3" role="tabpanel">
         <div id="Parent3"></div>
-    </div>
+    </div>*@
 </div>
 
 @Html.Hidden("RedirectTo", Url.Action("Home", "Home"))
