--- a/ProAcc/Views/IssueTrack/_IssueTrackIndex.cshtml
+++ b/ProAcc/Views/IssueTrack/_IssueTrackIndex.cshtml
@@ -89,7 +89,7 @@
             "columnDefs": [
                 { "width": "20%", "targets": 1 }
             ],
-            "order": [[11, "asc"]]
+            "order": [[10, "desc"]]
         });
     });
 </script>
