--- a/ProAcc/Views/Role/_RoleIndex.cshtml
+++ b/ProAcc/Views/Role/_RoleIndex.cshtml
@@ -43,7 +43,7 @@
              "columnDefs": [
                  {
                      "targets": [2],
-                     "visible": true
+                     "visible": false
                  }
              ]
          })
