--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -784,7 +784,7 @@
                             {
                                 <li>
                                     <a href="@Url.Action("CustomerNeedHelpIndex", "CustomerQuestionnaire")">
-                                        <i class="metismenu-icon fa fa-check-square"></i>
+                                        <i class="metismenu-icon fa fa-question-circle"></i>
                                         Customer Need Help
                                         <i class="metismenu-state-icon fa caret-left"></i>
                                     </a>
@@ -795,7 +795,7 @@
                             {
                                 <li>
                                     <a href="@Url.Action("SendMailToCustomer", "CustomerQuestionnaire")">
-                                        <i class="metismenu-icon fa fa-check-square"></i>
+                                        <i class="metismenu-icon fa fa-envelope"></i>
                                         ProAcc Survey Mail
                                         <i class="metismenu-state-icon fa caret-left"></i>
                                     </a>
