--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -108,7 +108,7 @@
             "columnDefs": [
                 {
                     "targets": [5],
-                    "visible": true
+                    "visible": false
                 }
             ]
         });
