--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -710,7 +710,7 @@
              //   }
 
             ],
-            loadonce: true,
+            loadonce: false,
             altRows: true,
             //rownumbers : true,
             //multiselect : true,
