--- a/ProAcc/Views/Activity/_ActivityCreationCreate_1.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate_1.cshtml
@@ -11,20 +11,6 @@
         color: red;
         font-size: 14px;
     }*/
-    input#txtParallelCheck {
-        position: absolute;
-        margin-top: 10%;
-        height: 14px;
-        left: 6%;
-        top: -12px;
-        cursor: pointer;
-    }
-    label.control-label.col-md-4.Parallel {
-        position: absolute;
-        margin-top: 7%;
-        left: 9%;
-    }
-
 </style>
 <a class="card-title" id="activityCreation">Activity Creation</a>
 <a class="card-title" style="display:none" id="activityUpdation">Activity Updation</a>
@@ -57,13 +43,13 @@
                         {
                             <option value="@item.Id">@item.PhaseName</option>
                         }
-                    </select>
+                    </select>                   
                 </div>
                 <div>
                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblPhase">&nbsp;</span>
                 </div>
             </div>
-
+           
             <div class="form-group">
                 <label class="control-label col-md-4 required">Application Area</label>
                 <div class="col-md-10">
@@ -79,40 +65,6 @@
                 </div>
                 <div>
                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblApplicationArea">&nbsp;</span>
-                </div>
-            </div>
-
-
-            <div class="form-group">
-                <label class="control-label col-md-4 required">TaskType</label>
-                <div class="col-md-10">
-                    <select class="form-control" id="drpTaskType">
-                        <option value="0">Select Task-Type</option>
-                        @foreach (var item in ViewBag.TaskId)
-                        {
-                            <option value="@item.TaskId">@item.TaskName</option>
-                        }
-                    </select>
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblTaskType">&nbsp;</span>
-                </div>
-            </div>
-
-            <div class="form-group" id="parallelhideid">
-                <label class="control-label col-md-4 ">Parallel-Name</label>
-                <div class="col-md-10">
-                    <input id="drphiddenRole" type="hidden" />
-                    <select class="form-control" id="drpParallelId">
-                        <option value="00000000-0000-0000-0000-000000000000">Select Parallel-Name</option>                       
-                        @foreach (var item in ViewBag.ParallelId)
-                        {
-                            <option value="@item.ParallelId">P @item.ParallelName</option>
-                        }
-                    </select>
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblParallelId">&nbsp;</span>
                 </div>
             </div>
         </div>
@@ -155,21 +107,10 @@
             <div class="form-group">
                 <label class="control-label col-md-4 required">Est.Hrs HH:MM</label>
                 <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtEstimated" placeholder="00:00" />
+                    <input type="text" class="form-control" id="txtEstimated" placeholder="00:00"/>
                 </div>
                 <div>
                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblEstimated">&nbsp;</span>
-                </div>
-            </div>
-
-
-            <div class="form-group" id="parallelhidecheck">
-                <div class="col-md-12">
-                    <input type="checkbox"  id="txtParallelCheck" name="check" />
-                    <label class="control-label col-md-4 Parallel">New Parallel Name</label>
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblParallelcheck">&nbsp;</span>
                 </div>
             </div>
         </div>
@@ -210,9 +151,6 @@
 <script>
 
     $(document).ready(function () {
-        $("#parallelhidecheck , #parallelhideid").hide();
-
-
          $("#prt").hide();
         $("#btnActivityCreCreate").prop('disabled', true);
 
@@ -374,7 +312,7 @@
         //});
 
 
-        $('#drpPhase,#drpRole,#drpApplicationArea,#drpBlock,#drpTaskType').change(function () {
+        $('#drpPhase,#drpRole,#drpApplicationArea,#drpBlock').change(function () {
              var Task = $("#txtTask").val();
             var sequence = $("#txtSequence").val();
             var Phase = $('#drpPhase').val();
@@ -382,9 +320,7 @@
             var ApplicationArea = $('#drpApplicationArea').val();
             var Block = $('#drpBlock').val();
             var Estimated = $("#txtEstimated").val();
-            var TaskType = $("#drpTaskType").val();
-            var ParallelId = $("#drpParallelId").val();
-            if (Task != "" && sequence != "" && Phase != 0 && Role != 0 && ApplicationArea != 0 && Block != 0 && Estimated != "" && TaskType!="0") {
+            if (Task != "" && sequence != "" && Phase != 0 && Role != 0 && ApplicationArea != 0 && Block != 0&& Estimated!="") {
                 $("#lblApplicationArea").html("");
                 $('#lblPhase').html("");
                 $('#lblRole').html("");
@@ -398,30 +334,6 @@
 
     });
 
-    $('input[type="checkbox"][name="check"]').click(function () {
-        if ($(this).prop("checked") == true) {
-            $("#drpParallelId").prop("disabled", true);
-            $('#drpParallelId').prop('selectedIndex', 0);
-        }
-        else if ($(this).prop("checked") == false) {
-            $("#drpParallelId").prop("disabled", false);
-        }
-    });
-
-    $("#drpTaskType").change(function () {
-        //var Paralleltype = $("#drpParallelId").val();
-        var taskValue = $(this).children("option:selected").val();
-        if (taskValue == "1" || taskValue == "3") {
-            $("#parallelhidecheck , #parallelhideid").hide();
-            $("#drpParallelId").val("");
-        }
-        else if (taskValue == "2") {
-            $("#parallelhidecheck , #parallelhideid").show();
-             $('#drpParallelId').prop('selectedIndex', 0);
-           // $("#drpParallelId").prop("disabled", true);
-        }
-    });
-
     function ValidateActivity() {
 
         var Task = $("#txtTask").val();
@@ -430,9 +342,6 @@
         var Role = $('#drpRole').val();
         var Block = $('#drpBlock').val();
         var Estimated = $("#txtEstimated").val();
-        var TaskType = $("#drpTaskType").val(); 
-        var ParallelId = $("#drpParallelId").val();
-
 
         var lblTask = $("#lblTask").text().trim();
         var lblApplicationArea = $("#lblApplicationArea").text().trim();
@@ -440,11 +349,8 @@
         var lblRole = $('#lblRole').text().trim();
         var lblBlock = $('#lblBlock').text().trim();
         var lblEstimated = $("#lblEstimated").text().trim();
-        var lblTaskType = $("#lblTaskType").text().trim();
-        var lblParallelType = $("#lblParallelId").text().trim();
-
-        if (Task.length > 0 && ApplicationArea != 0 && Phase != 0 && Role != 0 && Block != 0 && Estimated != "" && TaskType != 0 &&
-            lblTask == "" && lblApplicationArea == "" && lblPhase == "" && lblRole == "" && lblBlock == "" && lblEstimated == "" && lblTaskType=="") {
+        if (Task.length > 0 && ApplicationArea != 0 && Phase != 0 && Role != 0 && Block !=0 &&Estimated!="" &&
+            lblTask == "" && lblApplicationArea=="" &&  lblPhase == "" && lblRole == "" && lblBlock==""&&lblEstimated=="" ) {
 
              $("#btnActivityCreCreate").prop("disabled", false);
              $("#btntivityCreUpdate").prop("disabled", false);
@@ -465,7 +371,7 @@
 
     });
     $("#btnActivityCreCreate").on("click", function () {
-        debugger
+
         var Task = $("#txtTask").val();
         Task = Task.replace(/,/g, " ");
        // var sequence = $("#txtSequence").val();
@@ -475,8 +381,6 @@
         var Role = $('#drpRole').val();
         var BlockId = $('#drpBlock').val();
         var Estimated = $("#txtEstimated").val();
-        var Tasktype = $("#drpTaskType").val();
-        var Paralleltype = $("#drpParallelId").val();
          Estimated = Estimated.replace(/:/g, ".");
 
         var model = {
@@ -485,17 +389,9 @@
             BuildingBlock_id: BlockId,
             EST_hours:Estimated,
             ApplicationAreaID: ApplicationArea,
-            RoleID: Role,
-            Task_id: Tasktype,
-            Parallel_Id: Paralleltype
+            RoleID:Role
         }
-        if (Tasktype == 0)
-        {
-            $("#lblTaskType").html("Please enter the Task Type").show().fadeOut(5000);
-            ValidateActivity();
-        }
-
-        else if (Task == "") {
+        if (Task == "") {
             $("#lblTask").html("Please enter the Task").show().fadeOut(5000);
             ValidateActivity();
         }
@@ -523,35 +419,11 @@
         else {
             $("#drpTsk").empty();
             var id = $("#drpPhase").val()
-            if (id > 0 && (Paralleltype != null && Paralleltype!='00000000-0000-0000-0000-000000000000')) {
+            if (id > 0) {
                 $.ajax({
                     type: "GET",
-                    url: '@Url.Action("GetAllTaskByParallelType","Activity")',
-                    data: { id: id, Parallel_Id: Paralleltype },
-                    contentType: "application/json; charset=utf-8",
-                    dataType: "json",
-                    success: function (response) {
-                        if (response != null) {
-                            $('#drpTsk').append($("<option value='0'>Please Select Previous Task</option>"));
-                            $.each(response, function (index, item) {
-                                var option = $("<option value='" + item.Activity_ID + "'>" + item.Task + "</option>");
-                                $('#drpTsk').append(option);
-                            });
-                        }
-                    },
-                    failure: function (response) {
-                        alert(response.responseText);
-                    },
-                    error: function (response) {
-                        alert(response.responseText);
-                    }
-                });
-            }
-            else if(id>0) {
-                 $.ajax({
-                    type: "GET",
                     url: '@Url.Action("GetAllTask","Activity")',
-                    data: { id: id},
+                    data: { id: id },
                     contentType: "application/json; charset=utf-8",
                     dataType: "json",
                     success: function (response) {
@@ -623,8 +495,6 @@
         }
     });
     $("#btnSeq").on("click", function () {
-
-        debugger
         var id = $("#activityrid").val();
         var Task = $("#txtTask").val();
         Task = Task.replace(/,/g, " ");
@@ -633,14 +503,11 @@
         var Role = $('#drpRole').val();
         var BlockId = $('#drpBlock').val();
         var Estimated = $("#txtEstimated").val();
-        var Tasktype = $("#drpTaskType").val();
-        var Paralleltype = $("#drpParallelId").val();
         Estimated = Estimated.replace(/:/g, ".");
 
         var LatestTaskId = $("#hiddenActivityId").val();
         var LastTaskId = $("#drpTsk").val();
 
-        
         var model = {
             Activity_ID: id,
             Task: Task,
@@ -650,8 +517,6 @@
             ApplicationAreaID: ApplicationArea,
             RoleID: Role,
             PreviousId: LastTaskId,
-            TaskId: Tasktype,
-            ParallelId: Paralleltype
         }
         if (Task == "") {
             $("#lblTask").html("Please enter the Task").show().fadeOut(5000);
