--- a/ProAcc/Views/Activity/_ActivityCreationIndex.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationIndex.cshtml
@@ -14,8 +14,8 @@
         <thead>
             <tr>
                 @*<th cope="col" style="width:3%;text-align:center;">
-                        #
-                    </th>*@
+            #
+        </th>*@
                 <th>Task</th>
                 @*<th>Cre_on</th>*@
                 <th>Building Blocks</th>
@@ -24,6 +24,8 @@
                 <th>Application Area</th>
                 <th>Sequence</th>
                 <th>Est.Hrs</th>
+                <th>Task type</th>
+                <th>Parallel Name</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -31,41 +33,50 @@
             @*@{int j = 1;}*@
             @foreach (var item in ViewBag.AMM)
             {
-                <tr>
-                    @*<td>
-                            @j
-                        </td>
-                        @{j++;
-                        }*@
-                    <td>
-                        <a class="txtG" value="@item.Task">@item.Task</a>
-                    </td>
-                    @*<td>
-                            <a class="txtG" value="@item.Cre_on">@item.Cre_on</a>
-                        </td>*@
-                    <td>
-                        <a class="txtG" value="@item.BuildingBlock_id">@item.Buldingblock</a>
-                    </td>
-                    <td>
-                        <a class="txtG" value="@item.PhaseID">@item.Phase</a>
-                    </td>
-                    <td>
-                        <a class="txtG" value="@item.RoleID">@item.Role</a>
-                    </td>
-                    <td>
-                        <a class="txtG" value="@item.ApplicationAreaID">@item.ApplicationArea</a>
-                    </td>
-                    <td>
-                        <a class="txtG" value="@item.Sequence_Num">@item.Sequence_Num</a>
-                    </td>
-                    <td>
-                        <a class="txtG" value="@item.EST_hours">@item.EST_hours1</a>
-                    </td>
-                    <td>
-                        <a href="#" id="btnprjtEdit" class="editActivityCreation fa fa-edit"></a><input type="hidden" value="@item.Activity_ID" />
-                        <a href="#" class="btnActivityDelete fa fa-trash"></a><input type="hidden" value="@item.Activity_ID" />
-                    </td>
-                </tr>
+            <tr>
+                @*<td>
+                    @j
+                </td>
+                @{j++;
+                }*@
+                 <td>
+                    <a class="txtG" value="@item.Task">@item.Task</a>
+                 </td>
+                 @*<td>
+                    <a class="txtG" value="@item.Cre_on">@item.Cre_on</a>
+                </td>*@
+                <td>
+                    <a class="txtG" value="@item.BuildingBlock_id">@item.Buldingblock</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.PhaseID">@item.Phase</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.RoleID">@item.Role</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.ApplicationAreaID">@item.ApplicationArea</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.Sequence_Num">@item.Sequence_Num</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.EST_hours">@item.EST_hours1</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.Tasktype">@item.Tasktype</a>
+                </td>                
+                <td>
+                    @if (item.ParallelType != "")
+                    {
+                        <a class="txtG" value="@item.ParallelType">P @item.ParallelType</a>
+                    }
+                </td>               
+                <td>
+                    <a href="#" id="btnprjtEdit" class="editActivityCreation fa fa-edit"></a><input type="hidden" value="@item.Activity_ID" />
+                    <a href="#" class="btnActivityDelete fa fa-trash"></a><input type="hidden" value="@item.Activity_ID" />
+                </td>
+            </tr>
             }
         </tbody>
     </table>
