--- a/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
+++ b/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Create Instance";
 }
-
+    <link href="~/Asset/css/Activity.css" rel="stylesheet" />
 
 <a class="card-title">Instance Creation</a>
 <hr />
@@ -18,7 +18,7 @@
             <div class="form-group">
                 <label class="control-label col-md-4 required">Instance Name</label>
                 <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtInstanceName" maxlength="3" />
+                    <input type="text" class="form-control txtInstanceName" id="txtInstanceName" maxlength="3" />
                     @*<span id="lblInstanceName" style="color:red" />*@
                 </div>
                 <div>
@@ -47,6 +47,7 @@
                 <div class="col-md-offset-2 col-md-10">
                     <input type="button" value="Create" class="btn btn-primary" id="btnInstanceCreate" />
                     <input type="button" value="Update" class="btn btn-info" id="btnInstanceUpdate" style="display:none" />
+                    <input type="button" value="Clone" class="btn btn-info" id="btnClone" onclick="document.getElementById('id01').style.display='block'"/>
                     <a class="btn btn-success" id="btnAddNew" style="display:none"><i class="fa fa-plus"></i>Add New</a>
                 </div>
             </div>
@@ -55,13 +56,51 @@
         
     </div>
 </div>
+
+<div class="w3-container">
+    <div id="id01" class="w3-modal">
+        <div class="w3-modal-content" style="margin-left: 355px;margin-top: 110px; height:20%;">
+            <div class="w3-container" style="margin:0 auto !important;">
+                <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+                <div class="row" style="margin-top:3%;">
+                    <div class="col-4">
+                        <label class="control-label col-md-4 required">Project</label>
+                        <select class="form-control" id="drpProjectName">
+                            <option value="0">Select Project</option>
+                            @foreach (var item in ViewBag.project)
+                            {
+                                <option value="@item.Project_Id">@item.Project_Name</option>
+                            }
+                        </select>
+                        <span class="Class_span" id="lblProjectName">&nbsp;</span>
+                    </div>
+                    <div class="col-2">
+                        <label class="control-label col-md-4 required">Instance</label>
+                        <select class="form-control" id="drpInstance">
+                        </select>
+                    </div>
+                    <div class="col-3">
+                        <label class="control-label col-md-4 required">Instance</label>
+                        <input type="text" id="txtInstance1" class="form-control txtInstanceName" maxlength="3" style="border: 2px solid #ccc !important" />
+                        <span class="Class_span" id="lblInstance1">&nbsp;</span>
+                    </div>
+                    <div class="col-1"></div>
+                    <div class="col-2">
+                        <label class="control-label col-md-4"></label>
+                        <button type="button" id="btnCloneSave" class="btn btn-primary" style="margin-bottom:50px !important;">Clone&Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
 
     $(document).ready(function () {
-         $("#prt").hide();
         $("#btnInstanceCreate").prop('disabled', true);
 
-        $("#txtInstanceName").keypress(function (event) {
+        $(".txtInstanceName").keypress(function (event) {
         
             var regex = new RegExp("^[a-zA-Z0-9 ]+$");
             var str = String.fromCharCode(!event.charCode ? event.which : event.charCode);
@@ -75,38 +114,62 @@
            
         });
 
+        $('#drpProjectName').change(function () {
+            var Project = $("#drpProjectName").val().trim();
 
-        @*$('#txtInstanceName').on('focusout', function () {
-           
-            var InstName = $("#txtInstanceName").val().trim();
-            var id = $("#Instid").val();
-            if (InstName == "") {
-                $("#lblInstanceName").html("Please Enter valid Instance name").show().fadeOut(2000);
-            }
-            else {
-                $.ajax({
-                url: '@Url.Action("CheckInstanceNameAvailability", "InstanceCreation")',
-                type: "GET",
-                data: { namedata: InstName,id:id },
+            $.ajax({
+                url: '@Url.Action("GetInstancesByProject", "InstanceCreation")',
                 dataType: "json",
-                success: function (data) {
-                    if (data != "success") {
-                        $("#lblInstanceName").html("This Instance Name is already in use").show();
-                        $("#btnInstanceCreate").prop('disabled', true);
-                         $("#btnInstanceUpdate").prop('disabled', true);
-                    }
-                    else {
-                        $("#lblInstanceName").html("").hide();
-                        $("#btnInstanceCreate").prop('disabled', false);
-                        $("#btnInstanceUpdate").prop('disabled', false);
-                    }
+                async: false,
+			    contentType: "application/json; charset=utf-8",
+                data: { id: Project},
+                success: function (res) {
+                    $.each(res, function (data, value) {
+                        $('#drpInstance').append($("<option value='" + value.Instance_id + "'>" + value.InstaceName + "</option>"));                                                       
+                    })
                 },
                 error: function (err) {
                     alert(err);
                 }
-            });
+            })
+        });
+
+        $("#btnCloneSave").on("click", function () {
+
+            var InstanceName = $("#txtInstance1").val().trim();
+            var Project = $("#drpProjectName").val().trim();        
+            var Previous_Instance = $("#drpInstance").val().trim();        
+
+            if (InstanceName == "") {
+                $("#lblInstance1").html("Please enter the Instance Name").show().fadeOut(5000);
             }
-        });*@
+            else if (Project == 0) {
+                $("#lblProjectName").html("Please Select the project").show().fadeOut(5000);
+            }
+            else {
+                  $.ajax({
+                    type: "POST",
+                    url: '@Url.Action("CreateClone","InstanceCreation")',
+                    data: { InstaceName: InstanceName, Project_ID: Project,Previous_Instance:Previous_Instance },
+                        success: function (response) {
+                            if (response == "success") {
+                                Notiflix.Notify.Success('Instance Cloned successfully..!', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                                location.reload();
+                            }
+                            else {
+                               Notiflix.Notify.Success('Instance Not Cloned..!', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                            }
+                        },
+                        failure: function (response) {
+                           alert(response.responseText);
+                        },
+                        error: function (response) {
+                            alert(response.responseText);
+                        }
+                });
+            }
+
+        });
 
 
         $('#drpProject').change(function () {
